samples/_failures_safe/1761426290_f3e67a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f2aa32c.c: In function ‘main’:
./samples/SAFE/__tmp_8f2aa32c.c:121: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_8f2aa32c.c:120:5: error: expected declaration or statement at end of input
  120 |     while
      |     ^~~~~
